--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,16 +1,23 @@
 @font-face {
     font-family: 'licorice';
-    src: url(/font/Licorice/Licorice-Regular.ttf);
+    src: url(/Fuentes/Licorice/Licorice-Regular.ttf);
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face{
+    font-family: 'arsenal';
+    src: url(/font/K2D/K2D-ExtraBold.ttf);
     font-weight: normal;
     font-style: normal;
 }
 
 body {
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family:'K2D';
     margin: 0;
     padding: 0;
     background-color: #f9f9f9; /* Color de fondo más tenue */
-    color: #3d1a30; /* Color de texto */
+    color: #7b3963; /* Color de texto */
     
 }
 
@@ -19,14 +26,13 @@ main {
 }
 
 header {
-    background-color: #f7ecf5; 
-    color: #ad5590;
+    background-color: #f0daeb; 
+    color: #934376;
     text-align: center;
-    padding: 0 30px 0 30px;
+    padding: 30 0 30px 0;
     position: relative; /* Hacemos que el contenedor sea relativo para posicionar la imagen */
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 0 20px 20px 20px;
-    font-size:larger;
 }
 
 .navbar {
@@ -35,10 +41,17 @@ header {
     display: flex;
     align-content: center;
     color: #ffffff;
-    position:static;
-    padding: 5px 0; 
+    position: relative;
+    padding: 0;
+    margin: 0 10px 20px 10px;
   }
-  
+
+
+  .container-fluid{
+    background-color: #C272AC;
+    padding: 0 30px;
+}
+
   .logo img {
     width: 30px; 
     height: 30px;
@@ -48,13 +61,13 @@ header {
   
   .nav-links {
     list-style-type: none;
-    margin: auto;
+    margin: 0;
     padding: 0;
   }
   
   .nav-links li {
     display: inline;
-    margin-right: 10px;
+    margin-right: 0px;
   }
   
   .nav-links li:last-child {
@@ -85,19 +98,11 @@ header img {
     margin-right: 20px; /* Agrega un margen a la derecha de la imagen */
 }
 
-/*.logo {
-    width: 200px; 
-    height: auto;*/ /* Permite que la altura se ajuste automáticamente manteniendo la proporción */
-   /* margin-left: 10px; 
-}*/
-
-
 
 header img.logo {
     max-width: 3000px; /* Establecer un ancho máximo para la imagen */
     height:auto; /* Permitir que la altura se ajuste automáticamente manteniendo la proporción */
 }
-
 
 .logo {
     max-width: 100%; /* Para que la imagen no se estire más allá de su tamaño natural */
@@ -106,54 +111,13 @@ header img.logo {
 }
 
 h1 {
-    font-size: 24px; /* Tamaño del texto del título */
+    font-size: 150px; /* Tamaño del texto del título */
     white-space: nowrap; /* Evita que el título se divida en varias líneas */
     overflow: hidden; /* Oculta el texto que se desborda */
     text-overflow: ellipsis; /* Agrega puntos suspensivos (...) si el texto es demasiado largo para mostrar */
     color: #ad5590;
+    font-family: 'arsenal'
 }
-
-/*********/
-
-.hero {
-    display: flex; /* Usa flexbox para colocar la imagen y el texto en una línea */
-    align-items: center; /* Centra verticalmente los elementos */
-    margin-bottom: 30px; /* Agrega espacio inferior */
-}
-
-.hero .img {
-    max-width: 100px; /* Establece un ancho máximo para la imagen */
-    margin-right: 20px; /* Agrega espacio a la derecha de la imagen */
-}
-
-
-.equipo {
-    display: flex;
-    align-items: center;
-    margin-bottom: 30px;
-}
-
-
-.equipo .hero,
-.equipo .content {
-    flex: 1;
-    margin-right: 20px; /* Ajusta el margen entre los dos contenedores */
-}
-
-.equipo .hero {
-    margin-right: 10px; /* Reduce el margen a la derecha de la sección de la imagen */
-}
-
-.equipo .hero .img {
-    max-width: 250px; /* Amplía el ancho máximo de la imagen */
-}
-
-
-.equipo .content {
-    background-color: #f7ecf5; /* Color de fondo rosa */
-    padding: 20px; /* Añade un poco de espacio alrededor del texto */
-}
-/******/
 
 #registro-form ul {
     list-style-type: none; /* Elimina las viñetas */
@@ -178,7 +142,7 @@ section {
 section h2 {
     text-align: center;
     color: #7B3963; 
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'arsenal';
     font-size: 20px;
 }
 
@@ -189,7 +153,7 @@ section p {
 }
 
 #signup p {
-    font-size: 40px; /* Tamaño de fuente más pequeño */
+    font-size: 20px; /* Tamaño de fuente más pequeño */
 }
 
 /* Agrega estilos para la sección equipo */
@@ -199,9 +163,15 @@ section p {
 
 /* Agrega estilos para la sección equipo */
 .equipo .content p {
-    color: #ad5590; /* Color definido por p */
+    color: #683354; /* Color definido por p */
+    background-color: #f0daeb;
+    margin: 0px;
+    text-align:start;
+    border-radius:0 90px 0;
+    border-style: solid;
+    border-color: #e4bddb;
+    border-width: 5px;
 }
-
 
 #signup h2 {
     font-weight: bold;
@@ -212,7 +182,7 @@ ul {
     padding: 0;
 }
 
-li:before {
+li::before {
     content: "•";
     margin-right: 10px;
 }
@@ -258,7 +228,6 @@ footer {
     font-size: 14px;
 }
 
-
 #registro-form input[type="text"],
 #registro-form input[type="tel"],
 #registro-form input[type="email"] {
@@ -295,60 +264,61 @@ footer {
     background-color: #7B3963 !important;
 }
 
+/* Media queries */
 @media (max-width: 576px) {
-    @media (max-width: 576px) {
-        body {
-            font-size: 14px; /* Redimensionar el tamaño de la fuente */
-        }
-    
-        .logo img {
-            width: 100px; /* Tamaño de las imágenes */
-            height: auto;
-        }
-    
-        .navbar {
-            flex-direction: column; /* Diseño específico para la navegación en pantallas grandes */
-        }
-    
-        /* Reorganiza el contenido para pantallas pequeñas */
-        .col-md-6 {
-            width: 100%; /* Asegurar que los elementos ocupen todo el ancho en dispositivos pequeños */
-            margin-bottom: 20px; /* Agregar un espacio entre las columnas */
-        }
-    
-        .text-md-right {
-            text-align: center !important; /* Centra el texto en dispositivos móviles */
-        }
-    
-        .logo {
-            margin-left: 0; /* Elimina el margen izquierdo en dispositivos móviles */
-            margin-top: 20px; /* Agrega espacio entre el texto y la imagen */
-            margin-bottom: 20px; /* Agrega espacio debajo del logo en dispositivos móviles */
-        }
-    
-        h1 {
-            font-size: 20px; /* Reduce el tamaño del título en dispositivos móviles */
-        }
-    
-        section h2 {
-            font-size: 16px; /* Cambia el tamaño del texto en dispositivos móviles */
-        }
-    
-        #about p {
-            font-size: 30px; /* Cambia el tamaño del texto en dispositivos móviles */
-        }
-    
-        .nav-links {
-            margin-top: 20px; /* Agregar espacio entre los elementos de la navegación en dispositivos móviles */
-        }
+    body {
+        font-size: 14px; /* Redimensionar el tamaño de la fuente */
     }
-    
-        .equipo .content p {
-            font-size: 16px; /* Tamaño de fuente más pequeño para pantallas pequeñas */
-            line-height: 1.5; /* Espaciado entre líneas */
-            padding: 0 20px; /* Añade un poco de espacio a los lados del texto */
-        }
+
+    .logo img {
+        width: 100px; /* Tamaño de las imágenes */
+        height: auto;
+    }
+
+    .navbar {
+        flex-direction: column; /* Diseño específico para la navegación en pantallas grandes */
+    }
+
+    /* Reorganiza el contenido para pantallas pequeñas */
+    .col-md-6 {
+        width: 100%; /* Asegurar que los elementos ocupen todo el ancho en dispositivos pequeños */
+        margin-bottom: 20px; /* Agregar un espacio entre las columnas */
+    }
+
+    .text-md-right {
+        text-align: center !important; /* Centra el texto en dispositivos móviles */
+    }
+
+    .logo {
+        margin-left: 0; /* Elimina el margen izquierdo en dispositivos móviles */
+        margin-top: 20px; /* Agrega espacio entre el texto y la imagen */
+        margin-bottom: 20px; /* Agrega espacio debajo del logo en dispositivos móviles */
+    }
+
+    h1 {
+        font-size: 20px; /* Reduce el tamaño del título en dispositivos móviles */
+    }
+
+    section h2 {
+        font-size: 16px; /* Cambia el tamaño del texto en dispositivos móviles */
+    }
+
+    #about p {
+        font-size: 30px; /* Cambia el tamaño del texto en dispositivos móviles */
+    }
+
+    .nav-links {
+        margin-top: 20px; /* Agregar espacio entre los elementos de la navegación en dispositivos móviles */
+    }
+
+
+    .equipo .content p {
+        font-size: 16px; /* Tamaño de fuente más pequeño para pantallas pequeñas */
+        line-height: 1.5; /* Espaciado entre líneas */
+        padding: 0 20px; /* Añade un poco de espacio a los lados del texto */
+    }
 }
+
 
 /* Estilos para pantallas medianas y grandes */
 @media (min-width: 577px) {
@@ -358,6 +328,7 @@ footer {
         padding: 0 50px; /* Añade más espacio a los lados del texto */
     }
 }
+
 
 @media (min-width: 577px) and (max-width: 992px) {
     .navbar {
@@ -370,7 +341,7 @@ footer {
 
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
     .text-md-right {
         text-align: center !important; /* Centra la imagen en dispositivos móviles */
     }
@@ -380,27 +351,130 @@ footer {
         margin-top: 20px; /* Agrega espacio entre el texto y la imagen */
     }
     
-    h1 {
-        font-size: 20px; /* Reduce el tamaño del título en dispositivos móviles si es necesario */
-    }
+        h1 {
+            font-size: 20px; /* Reduce el tamaño del título en dispositivos móviles si es necesario */
+        }
     
-    section h2 {
-        font-size: 16px; /* Cambia el tamaño del texto en dispositivos móviles */
-    }
+        section h2 {
+            font-size: 16px; /* Cambia el tamaño del texto en dispositivos móviles */
+        }
     
-    #about p {
-        font-size: 30px; /* Cambia el tamaño del texto en dispositivos móviles */
-    }
+        #about p {
+            font-size: 30px; /* Cambia el tamaño del texto en dispositivos móviles */
+        }
     
-    .navbar {
-        flex-direction: column; /* Diseño específico para la navegación en pantallas grandes */
-    }
+        .navbar {
+            flex-direction: column; /* Diseño específico para la navegación en pantallas grandes */
+        }
     
-    .nav-links {
-        margin-top: 20px; /* Agregar espacio entre los elementos de la navegación en dispositivos móviles */
-    }
+        .nav-links {
+            margin-top: 20px; /* Agregar espacio entre los elementos de la navegación en dispositivos móviles */
+        }
     
-    .logo {
-        margin-bottom: 20px; /* Agregar espacio debajo del logo en dispositivos móviles */
+        .logo {
+            margin-bottom: 20px; /* Agregar espacio debajo del logo en dispositivos móviles */
+        }
     }
+
+    @media (max-width: 992px) {
+        .navbar {
+            flex-direction: column; /* Diseño específico para la navegación en pantallas grandes */
+        }
+        
+        .nav-links {
+            margin-top: 20px; /* Agregar espacio entre los elementos de la navegación en dispositivos medianos */
+        }
+        
+        .logo {
+            margin-bottom: 20px; /* Agregar espacio debajo del logo en dispositivos medianos */
+        }
+    }
+
+    @media (min-width: 993px) {
+        .navbar {
+            flex-direction: column;
+            /* Diseño específico para la navegación en pantallas grandes */
+        }
+        
+        .col-md-6 {
+            width: 50%; /* Mostrar dos columnas por fila en pantallas grandes */
+        }
+        
+        .logo img {
+            width: 150px; /* Ajustar el tamaño de las imágenes en pantallas grandes */
+            height: auto;
+        }
+    } 
+
+    /* Hacer responsivos los testimonios */
+@media (min-width: 768px) {
+    .testimonials {
+        flex-direction: row;
+        justify-content: center;
+        align-items: flex-start;
+    }
+
+    .testimonial {
+        width: 300px; /* Ancho fijo para cada testimonio */
+        margin-right: 20px; /* Espacio entre testimonios */
+    }
+
+    .testimonial:last-child {
+        margin-right: 0; /* Eliminar margen derecho del último testimonio */
+    }
+}
+
+/* Ajustes adicionales para pantallas pequeñas */
+@media (max-width: 576px) {
+    .testimonial {
+        width: 100%; /* Ajustar ancho al tamaño completo del contenedor */
+        margin-right: 0; /* Eliminar margen derecho */
+    }
+}
+
+.nav-links img {
+    width: 25px; /* Establece el ancho deseado para las imágenes */
+    height: auto; /* Mantén la proporción de aspecto */
+    margin-right: 10px; /* Añade un margen a la derecha para separar los logos */
+}
+.imagen1 {
+    text-align: center; /* Centra el contenido horizontalmente */
+}
+
+.imagen1 img {
+    max-width: 100%; /* Establece un ancho máximo para la imagen */
+    height: auto; /* Mantiene la proporción de aspecto */
+}
+#about p {
+    font-family: 'licorice', sans-serif; /* Aplica la fuente "Licorice" al párrafo */
+    font-size: 140px; /* Tamaño de la fuente */
+    color: #ad5590; /* Color del texto */
+}
+
+
+.testimonials { /* Estilos para testimonios */
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
+.testimonial {
+background-color: #f7ecf5;
+padding: 20px;
+margin-bottom: 20px;
+border-radius: 10px;
+text-align: center;
+font-family: 'arsenal', sans-serif; /* Utiliza el mismo tipo de letra que "Características del Curso" */
+color: #7B3963; /* Utiliza el mismo color de texto que "Características del Curso" */
+}
+
+.testimonial img {
+width: 28px; /* Ajusta el ancho de la imagen según sea necesario */
+height: auto; /* Mantiene la proporción de aspecto */
+}
+
+#signup p {
+font-size: 40px; /* Cambia el tamaño de la fuente según sea necesario */
+font-family: 'licorice', sans-serif; /* Mantén la misma fuente que has definido */
+color: #ad5590; /* Mantén el mismo color de texto */
 }
